Closed
Bug 1234210
Opened 10 years ago
Closed 10 years ago
Only update accessibility pref lastLoadDate on shutdown
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla46
| Tracking | Status | |
|---|---|---|
| firefox46 | --- | fixed |
People
(Reporter: jimm, Assigned: jimm)
Details
Attachments
(1 file)
|
4.56 KB,
patch
|
tbsaunde
:
review+
|
Details | Diff | Splinter Review |
Someone reported in bug 1233874 that accessibility.lastLoadDate is getting updated frequently during their session. I wasn't expecting this, I assumed nsBaseWidget::GetRootAccessible() would get called infrequently. There's probably some overhead here we can eliminate by setting a bool flag and updating this value on shutdown.
| Assignee | ||
Comment 1•10 years ago
|
||
| Assignee | ||
Updated•10 years ago
|
Attachment #8700607 -
Flags: review?(tbsaunde+mozbugs)
Comment 2•10 years ago
|
||
(In reply to Jim Mathies [:jimm] from comment #0)
> Someone reported in bug 1233874 that accessibility.lastLoadDate is getting
> updated frequently during their session. I wasn't expecting this, I assumed
> nsBaseWidget::GetRootAccessible() would get called infrequently. There's
> probably some overhead here we can eliminate by setting a bool flag and
> updating this value on shutdown.
hmm, so I have some questions:
- do we have data on how many users shut down normally? I suspect I basically never do and firefox either crashes or is otherwise force killed, but I can certainly believe that's unusual.
- is it ok to write prefs this far into shutdown? I guess you've tested that and it works?
| Assignee | ||
Comment 3•10 years ago
|
||
(In reply to Trevor Saunders (:tbsaunde) from comment #2)
> (In reply to Jim Mathies [:jimm] from comment #0)
> > Someone reported in bug 1233874 that accessibility.lastLoadDate is getting
> > updated frequently during their session. I wasn't expecting this, I assumed
> > nsBaseWidget::GetRootAccessible() would get called infrequently. There's
> > probably some overhead here we can eliminate by setting a bool flag and
> > updating this value on shutdown.
>
> hmm, so I have some questions:
>
> - do we have data on how many users shut down normally? I suspect I
> basically never do and firefox either crashes or is otherwise force killed,
> but I can certainly believe that's unusual.
no but if we don't shutdown properly that's another bug. :) FWIW I've tested this in nightly and it works as expected.
>
> - is it ok to write prefs this far into shutdown? I guess you've tested that
> and it works?
yes, I've test this. The shutdown method this code runs in is in response to a pre-xpcom shutdown observer event. The profile is still available here.
Comment 4•10 years ago
|
||
(In reply to Jim Mathies [:jimm] from comment #3)
> (In reply to Trevor Saunders (:tbsaunde) from comment #2)
> > (In reply to Jim Mathies [:jimm] from comment #0)
> > > Someone reported in bug 1233874 that accessibility.lastLoadDate is getting
> > > updated frequently during their session. I wasn't expecting this, I assumed
> > > nsBaseWidget::GetRootAccessible() would get called infrequently. There's
> > > probably some overhead here we can eliminate by setting a bool flag and
> > > updating this value on shutdown.
> >
> > hmm, so I have some questions:
> >
> > - do we have data on how many users shut down normally? I suspect I
> > basically never do and firefox either crashes or is otherwise force killed,
> > but I can certainly believe that's unusual.
>
> no but if we don't shutdown properly that's another bug. :) FWIW I've tested
> this in nightly and it works as expected.
ok thanks, lets just hope not many people either kill -9 their browser or run out of battery.
Updated•10 years ago
|
Attachment #8700607 -
Flags: review?(tbsaunde+mozbugs) → review+
| Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
Keywords: checkin-needed
Comment 6•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
You need to log in
before you can comment on or make changes to this bug.
Description
•