Bug 1234210 - Restrict updates for accessibility.lastLoadDate to shutdown. r=trevor